# Neural-Rendering

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Samples/: CMakeLists.txt
Samples/BRDF/: BRDF.cpp  BRDF.cppm  BRDFInit.cpp  BRDFLaunch.cpp  BRDFModelData.cpp  BRDFPipelines.cpp  BRDFUI.cpp  BRDFUICreate.cpp  BRDFUpload.cpp  BRDFVulkanConstants.h  CMakeLists.txt  FASTKAN_HeaderNames.def  RELUKAN_HeaderNames.def  SINEKAN_HeaderNames.def  Vdevice.cppm
Samples/BRDF/HeaderNames/: CHEBYKAN.def  CoopVec.def  HeaderNames.def
Samples/BRDF/HeaderNames/FASTKAN/: FASTKAN_2-2_1-8_3-6.def  FASTKAN_2-2_1-8_9-12.def
Samples/BRDF/HeaderNames/NBRDF/: NBRDF.def
Samples/BRDF/KAN/: FastKANCoopVec.cppm  FastKan.cpp  FastKan.cppm  FastKan.h  ReadKANWeights.cpp  WriteFastKan.cpp  WriteFastKan.cppm
Samples/BRDF/Shaders/: BRDFBindings.h  BRDFCHEBYKAN.h  BRDFCHEBYKAN.slang  BRDFClassic.slang  BRDFConfig.h  BRDFConstants.h  BRDFConstants.slang  BRDFCoopVec.slang  BRDFCoopVecMacros.h  BRDFFASTKAN.slang  BRDFFastKanCoopVec.slang  BRDFKAN.h  BRDFKAN.slang  BRDFMain.slang  BRDFRELUKAN.h  BRDFSINEKAN.h  BRDFSINEKAN.slang  BRDFScalarBuffer.slang  BRDFWeightsInBuffer.slang  BRDFWeightsInHeader.slang  Pbr.slang  Skybox.slang
Samples/BRDF/Shaders/KAN/CoopVec/: BRDFFastKanCoopVec.slang  BRDFFastKanCoopVecConstants.h  BRDFFastKanCoopVecConstants.slang  BRDFReluKanCoopVec.slang
Samples/BRDF/Shaders/KAN/Headers/: BRDFCHEBYKAN.slang  BRDFFASTKAN.slang  BRDFRELUKAN.slang  BRDFSINEKAN.slang
Samples/BRDF/Shaders/KAN/Headers/FASTKAN/: BRDFFASTKAN_shared.slang  BRDFFASTKAN_v0.slang  BRDFFASTKAN_v1.slang  BRDFFASTKAN_v2.slang  BRDFFASTKAN_v3.slang
Samples/BRDF/Shaders/MLP/: BRDFCoopVecMacros.h  BRDFWeightsInBuffer.slang
Samples/CUDNN/: CMakeLists.txt
Samples/Common/: CMakeLists.txt  Float16.hpp  MessageCallbacks.cpp  MessageCallbacks.cppm  SamplesCommon.cppm  Util.cppm
Samples/Common/Include/: CheckResult.h  Float16.hpp  Log.h  TWColors.def
Samples/Common/Misc/: Camera.cpp  Camera.cppm  CubeMap.cpp  CubeMap.cppm  Float16.cppm  HdriToCubemap.cpp  HdriToCubemap.cppm  Input.cpp  Input.cppm  LoadObj.cpp  LoadObj.cppm  LoadWeights.cpp  LoadWeights.cppm  Math.cppm  MeshPrimitives.cpp  MeshPrimitives.cppm  MessageCallbacks.cpp  MessageCallbacks.cppm  Mouse.cppm  StbModule.cppm  UI.cpp  UI.cppm  WLoader.cpp  WLoader.cppm
Samples/Common/Shaders/: Quad.vert
Samples/Common/Shaders/Include/: ShaderTypes.h
Samples/Common/Vulkan/: CheckResult.h  CommonVulkanUtils.cppm  PhysicalDevice.cpp  PhysicalDevice.cppm  VulkanFunctions.cppm
Samples/Common/Vulkan/VulkanExtensions/: VulkanExtensions.cpp  VulkanExtensions.cppm  VulkanExtensionsDefinitions.cpp  VulkanExtensionsDefinitions.h
Samples/Common/Window/: GLFWWindow.cpp  GLFWWindow.cppm  IWindow.cppm  WIndow.cppm  WindowManager.cpp  WindowManager.cppm
Samples/HostNetwork/: CMakeLists.txt  HostNetworkTest.cpp
Samples/SDF/: CMakeLists.txt  SDF.cpp  SDF.cu  SDF.cuh  cuSDF.cpp
Samples/SDF/Shaders/: SDFConfig.h  SDFConstants.h  SDFCoopVec.slang  SDFCoopVecMacros.h  SDFScalar.slang  SDFScalarBuffer.slang  SDFScalarInline.slang  SDFVec4.slang  SDFVector.slang  SDFWeights.h  SDFWeightsInBuffer.slang  SDFWeightsInHeader.slang  SdfMain.slang  SimpleSdf.frag  SimpleSdf.slang  SimpleSdf.vert  SimpleSdfDebug.frag
Source/HostNetwork/: HostNetwork.cpp  HostNetwork.cppm
Source/Layers/GenericLayers/: GenericLayers.cppm
Source/Layers/HostLayers/: HostLayers.cpp  HostLayers.cppm
Source/Log/: Log.cpp  Log.cppm
Source/Loss/GenericLoss/: GenericLoss.cppm
Source/Misc/: CoreModule.cppm  CoreTypes.cppm  Util.cppm
Source/Modules/: NeuralGraphics.cppm
Source/Network/GenericNetwork/: GenericNetwork.cpp  GenericNetwork.cppm
Source/Network/HostNetwork/: HostNetwork.cpp  HostNetwork.cppm
Source/Network/VulkanCoopVecNetwork/: VulkanCoopVecNetwork.cpp  VulkanCoopVecNetwork.cppm
Source/NetworkArchitecture/: Network.cpp  Network.cppm  NetworkLayer.cppm
Source/Optimizers/GenericOptimizers/: GenericOptimizer.cppm
Source/Optimizers/HostOptimizers/: HostOptimizers.cppm
Source/Shaders/: CoopVec.slang  Utils.slang
Source/Utils/: CoopVecUtils.cpp  CoopVecUtils.cppm  FileIOUtils.cpp  FileIOUtils.cppm  MakeString.cppm  MetaUtils.cppm  RangesUtils.cppm  StringViewCat.cpp  StringViewCat.cppm  Utils.cppm  VisitorUtils.cppm  VulkanUtils.cppm
Source/VulkanRHI/: VulkanBuffer.cpp  VulkanBuffer.cppm  VulkanCommandBuffer.cpp  VulkanCommandBuffer.cppm  VulkanEnums.cppm  VulkanImage.cpp  VulkanImage.cppm  VulkanMemoryAllocator.cppm  VulkanModule.cppm  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.cppm  VulkanRHI.cpp  VulkanRHI.cppm  VulkanSwapchain.cpp  VulkanSwapchain.cppm
